[gd_scene format=3 uid="uid://b2847opptwu7x"]

[ext_resource type="PackedScene" uid="uid://byqan6j5p4xtk" path="res://interactables/interactable_base.tscn" id="1_xe366"]
[ext_resource type="Script" uid="uid://cw3e7hjsdpwec" path="res://interactables/loot_container/loot_container.gd" id="2_ibqfj"]
[ext_resource type="InventoryDatabase" uid="uid://de5qy8ycey7yn" path="res://addons/inventory-system-demos/database/database.tres" id="3_g1c51"]
[ext_resource type="Script" uid="uid://l04bcqtrsxi1" path="res://interactables/loot_container/loot_container_data.gd" id="3_i2tna"]
[ext_resource type="Script" uid="uid://dlemxn6c687mt" path="res://addons/inventory-system-demos/mp/sync_grid_inventory.gd" id="5_a2ele"]
[ext_resource type="Script" uid="uid://dl8kl1msejot2" path="res://addons/inventory-system-demos/character/networked_openable.gd" id="5_h7gsf"]
[ext_resource type="Texture2D" uid="uid://c06nhxdwvnj8b" path="res://addons/assets/Materials/texture_07.png" id="7_mibu8"]

[sub_resource type="Resource" id="Resource_h7gsf"]
script = ExtResource("3_i2tna")
loot_table_id = "bush"
metadata/_custom_type_script = "uid://l04bcqtrsxi1"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_74kkj"]
albedo_texture = ExtResource("7_mibu8")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i2tna"]
albedo_color = Color(0.6848959, 0.17122397, 0.63673913, 1)

[node name="LootContainer" unique_id=1634607651 instance=ExtResource("1_xe366")]
script = ExtResource("2_ibqfj")
data = SubResource("Resource_h7gsf")

[node name="CollisionShape3D" parent="." index="0" unique_id=1404329005]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0046081543)

[node name="GridInventory" type="GridInventory" parent="." index="2" unique_id=238350716]
size = Vector2i(3, 3)
database = ExtResource("3_g1c51")

[node name="SyncGridInventory" type="Node" parent="GridInventory" index="0" unique_id=161868971 node_paths=PackedStringArray("inventory")]
script = ExtResource("5_a2ele")
inventory = NodePath("..")
metadata/_custom_type_script = "uid://dlemxn6c687mt"

[node name="LootGenerator" type="LootGenerator" parent="." index="3" unique_id=1452287675]
database = ExtResource("3_g1c51")

[node name="RevealTimer" type="Timer" parent="." index="4" unique_id=340099280]
one_shot = true

[node name="NetworkedOpenable" type="Node" parent="." index="5" unique_id=823995329]
script = ExtResource("5_h7gsf")
metadata/_custom_type_script = "uid://dl8kl1msejot2"

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="." index="6" unique_id=339587189]
material_override = SubResource("StandardMaterial3D_74kkj")

[node name="Chest" type="CSGBox3D" parent="CSGCombiner3D" index="0" unique_id=534411282]
material = SubResource("StandardMaterial3D_i2tna")

[node name="TopChest" type="CSGBox3D" parent="CSGCombiner3D" index="1" unique_id=1381300603]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5960282, 0)
size = Vector3(1, 0.19152832, 1)
